fix for bottom nav on small screens

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -2,12 +2,16 @@ html, body {
 	width: 100%; height: 100%;
 	margin: 0; padding: 0;
 	background: #FFF;
+	box-sizing: border-box;
 }
 
 body {
+	position: relative;
 	opacity: 0;
-	min-width: 800px;
+	min-width: 700px;
+	min-height: 600px;
 	overflow: -moz-scrollbars-none;
+	padding-bottom: 720px;
 }
 
 ::-webkit-scrollbar { 
@@ -48,7 +52,6 @@ ul {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	min-height: 800px;
 	margin: 0 auto;
 	background: #FFF;
 	padding-top: 35px;
@@ -95,8 +98,7 @@ ul {
 	margin: 0; padding: 0;
 	text-align: center;
 
-	position: absolute;
-	clear: both;
+	position: fixed;
 	left: 0;
 	bottom: 0;
 }
@@ -108,6 +110,7 @@ ul {
 	height: 100%;
 	margin: 0; padding: 0;
 	z-index: 99;
+	min-width: 700px;
 }
 
 .footer ul li {
